2006-12-15 [colin]	1.91.0cvs3

	* src/vcal_manager.c
		Make sure we don't increment SEQUENCE on replies
		(From RFC2445, 4.8.7.4 Sequence Number)
	* src/vcalendar.c
		Fix "(null)" names

2006-12-06 [colin]	1.91.0cvs2

	* src/vcal_manager.c
		Fix double encoding of subject

2006-12-06 [paul]	1.91.0cvs1

	* src/vcal_manager.c
		renaming

2006-12-04 [paul]	1.91.0

	1.91 released

2006-11-28 [paul]	1.90.0cvs5

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	1.90.0cvs4

	* debian/README.Debian
	* src/plugin.c
	* src/vcal_folder.c
		renaming

2006-11-17 [wwp]	1.90.0cvs3

	* src/vcal_folder.c
		Don't use a hardcoded plugin URI as it's in defs.

2006-11-08 [paul]	1.90.0cvs2

	* src/vcal_folder.c
		update Claws Mail url

2006-11-07 [paul]	1.90.0cvs1

	* COPYING
	* ChangeLog
	* README
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules
	* src/Makefile.am
	* src/plugin.c
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
	* src/vcalendar.h
		Name change

2006-11-07 [paul]	1.90.0

	1.90 released

2006-11-07 [paul]	1.89.1cvs9

	* po/de.po
	* po/fr.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Stephan Sachse, Fabien Vantard,
		Andrea Spadaccini, Frederico Goncalves Guimaraes,
		Andrej Kacian, and Ralgh Young

2006-10-25 [paul]	1.89.1cvs8

	* libical/design-data/parameters.csv
	* libical/libical/icalyacc.y
		Add support for the CHARSET parameter
		Fixes crashes when the SUMMARY property
		has a CHARSET parameter

2006-10-10 [paul]	1.89.1cvs7

	* src/vcal_prefs.c
		fix sensitivity issues (thanks to Colin)
		give the frames some space around the edges
		rewrite some of the English

2006-10-05 [colin]	1.89.1cvs6

	* src/vcal_manager.c