@@ -1,3 +1,9 @@
+2006-12-15 [ticho]	1.91.0cvs4
+
+	* configure.ac
+	* src/plugin.c
+		Use check_plugin_version() for version check.
+
 2006-12-15 [colin]	1.91.0cvs3
 
 	* src/vcal_manager.c
